2022-11-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change default number of workers to 1 (single-thread)
	* Fix typo in aide.conf manual page

2022-09-04 Marc Haber <mh+debian-packages@zugschlus.de>
	* Allow executable config files to belong to root as well (closes: #137)

2022-08-20 Hannes von Haugwitz  <hannes@vonhaugwitz.com>
	* Fix some compiler warnings
	* Handle read/write errors in parent/child communication
	* Escape backslash in JSON strings (closes: #136)
	* Improve configurability of workers
	  - add num_workers config option (closes: #134)
	  - accept percentage of available processors (closes: #135)

2022-08-13 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Support multithreading for hashsum calculation (closes: #12)
	  - add --without-pthread configure option
	  - add new log level 'thread'
	  - add new '--workers' parameter
	  - add new exit code 23 for thread errors
	  - require Autoconf Macro Archive (autoconf-archive)
	* Support restricted rules with empty restriction (closes: #133)

2022-08-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Add exit code 22 for memory allocation errors

2022-08-01 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Improve some logging

2022-07-31 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fix configure check for headers

2022-07-30 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Check for gcrypt if mhash is not available

2022-07-24 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor configure.ac
	  - improve --version output
	  - use pkg-config to get link flags
	* Fix typo in log message (closes: #129)
	* Update aide.conf.5 manual page
	  - fix backslash escaping (closes: #130)
	  - do not start line with ' (closes: #131)
	* Fix deep selective matches (closes: #132)

2022-07-10 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Change log level for some deprecations
	* Update manual pages

2022-07-09 Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Refactor code to scan file system